Updated .gitignore file
Updated .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ VectorPlay/Debug/VectorPlay.log
 Debug/VectorPlay2.exe
 *.ilk
 Debug/VectorPlay2.pdb
+Debug/VectorPlay2.exe
+*.ilk
+Debug/VectorPlay2.pdb
+*.idb
+VectorPlay/Debug/VectorPlay.log
